# FizzBuzz

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
fizz_buzz/: engine.py
fizz_buzz/scripts/: fizz_buzz.py
tests/: test_fizzbuzz.py
