[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["ilnarkz <ilnar-16_04@mail.ru>"]
readme = "README.md"
packages = [
  { include = "fizz_buzz" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
fizzbuzz = "fizz_buzz.engine:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
